# master-google-adk-cource

./: .env_example  .gitattributes  .gitignore  README.md  __init__.py  agent_runner.py  env_parameters.md  pyproject.toml
.github/: copilot-instructions.md
agents/code_writer/: agent.py  description.txt  instructions.md  instructions.txt
agents/designer/: agent.py  description.txt  instructions.md  instructions.txt
agents/query_generator/: agent.py  description.txt  instructions.txt
agents/questions_generator/: agent.py  description.txt  instructions.txt
agents/questions_researcher/: agent.py  description.txt  instructions.txt
agents/requirements_writer/: agent.py  description.txt  instructions.md  instructions.txt
agents/root_website_builder/: agent.py  description.txt
agents/website_builder/: instructions.txt
output/: 250915_190606_generated_page.html  250915_204229_generated_page.html  250916_215002_generated_page.html
tools/: file_writer.py
version-1-wesbite-builder-simple/: README.md  __init__.py  pyproject.toml  requirements.txt
version-1-wesbite-builder-simple/agents/website_builder/: agent.py  description.txt  instructions.txt
version-1-wesbite-builder-simple/output/: 250915_185835_generated_page.html
version-1-wesbite-builder-simple/tools/: __init__.py
version-1-wesbite-builder-simple/utils/: file_loader.py
